# pixelscribe

./: .gitignore  README.md  format  format.ps1  install-codespaces  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: my-documentation-isn-t-rendering-correctly.md  my-theme-s-features-aren-t-rendering-correctly.md  something-else-is-wrong.md
.github/workflows/: dependabot-auto.yml  main.yml
pixelscribe/: __init__.py  asset_resource.py  contexts.py  exceptions.py  feature_1d.py  feature_2d.py  json_exception_handler.py  overlay.py  project-settings-schema.json  py.typed  theme-schema.json  theme.py  types.py
pixelscribe/parser/: __init__.py  json_types.py  reader.py
pixelscribe/render/: __init__.py  font_loader.py  load_and_parse.py
pixelscribe_config/: pixelscribe.json
pixelscribe_config/dark/: theme.json
tests/: bench.py  test_feature1D.py  test_feature2D.py  test_import.py  test_overlay.py  test_parser.py  test_theme.py  theme.json
tests/full_themes/: background.json  corners_and_edges.json  i_deep_1.json  i_really_long.json  i_wrong_colors.json  i_wrong_features.json  i_wrong_overlays.json  logo.json  pixelscribe_assets.xcf  rainbow.json
tests/full_themes/rainbow/: theme.xcf
tests/schema_tests/: feature1d.json  overlay.json
