[tool.poetry]
name = "pixelscribe"
version = "0.1.0"
description = "A pixely documentation renderer"
authors = ["PenguinEncounter <49845522+penguinencounter@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.5.0"
cmarkgfm = "^2022.10.27"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
colorama = ">=0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
pytest = ">=7.2.0"
isort = "^5.13.1"
python-semantic-release = "^7.34.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
